[package]
name = "fastrand"
version = "1.4.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "A simple and fast random number generator"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stjepang/fastrand"
homepage = "https://github.com/stjepang/fastrand"
documentation = "https://docs.rs/fastrand"
keywords = ["simple", "fast", "rand", "random", "pcg"]
categories = ["algorithms"]
readme = "README.md"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = "0.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
rand = "0.8"
rand_pcg = "0.3"
getrandom = "0.2"
